# hairgl

./: CMakeLists.txt  README.md
include/hairgl/: HairGL.h  HairTypes.h  Math.h
sample/: Application.cpp  Application.h  CMakeLists.txt  CameraController.cpp  CameraController.h  hair.hgl  main.cpp
sample/data/: hair.hgl
src/: CMakeLists.txt  Common.cpp  Common.h  HairGL.cpp  Math.cpp  Renderer.cpp  Renderer.h
src/gl/: GLUtils.cpp  GLUtils.h  gl3w.cpp
src/shaders/: GrowthMeshVisualization.vert  GuidesVisualization.vert  Hair.frag  Hair.geom  Hair.tesc  Hair.tese  Hair.vert  ShaderTypes.h  SimpleColor.frag  Simulation.comp
util/: blender_export_hgl.py
